--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 diesel = { version = "1.4.4", features = ["postgres"] }
 dotenv = "0.15.0"
+actix-web = "4"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
