--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,5 @@ dotenv = "0.15.0"
 actix-web = "4"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+log = "0.4.0"
+env_logger = "0.9.0"
