--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -13,3 +13,5 @@ serde = {version = "=1.0.136", features = ["derive"] }
 anyhow = "1"
 yew-router = "0.16.0"
 common = { version = "0.1.0", path = "../common" }
+reqwasm = "0.5.0"
+wasm-bindgen-futures = "0.4"
