--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common = { version = "0.1.0", path = "../common" }
 yew = "0.19.3"
 wasm-bindgen = "0.2.67"
 serde_json = "1"
 serde = {version = "=1.0.136", features = ["derive"] }
 anyhow = "1"
 yew-router = "0.16.0"
-common = { version = "0.1.0", path = "../common" }
 reqwasm = "0.5.0"
 wasm-bindgen-futures = "0.4"
+yew-hooks = "0.1.54"
+log = "0.4.6"
+wasm-logger = "0.2.0"
